--- a/src/portal/index.html
+++ b/src/portal/index.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <div class="bg">
+      <video class="bg-video" autoplay muted loop playsinline preload="metadata">
+        <source src="/painel.mp4" type="video/mp4" />
+      </video>
       <div class="noise"></div>
       <div class="orb orb-a"></div>
       <div class="orb orb-b"></div>
